# OpenGLProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGLProject  cmake_install.cmake
src/: glad.c  main.cpp  sm.hpp
